<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SquareConsultAddActivity">
    <RelativeLayout
        android:background="@drawable/line_bot"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/consultAddExitBtn"
            android:layout_alignParentLeft="true"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@null"
            android:padding="15dp"
            android:src="@mipmap/btn_close" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/square_consult_add"
            android:textAlignment="center"
            android:textColor="@color/colorDarkText"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/consultAddSubmitBtn"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@color/colorDefaultText"
            android:enabled="false"
            android:textSize="14sp" />
    </RelativeLayout>
    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@color/colorLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/consultAddContent"
            android:hint="请详细描述您要咨询的问题，确保15字以上"
            android:gravity="start|top"
            android:background="@null"
            android:minLines="3"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:elevation="0dp"
                android:id="@+id/consultAddImgList"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/consultAddContentNum"
                android:textColor="@color/colorDefaultText"
                android:text="0"
                android:layout_toLeftOf="@id/maxWordTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/maxWordTip"
                android:text=" / 300"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorDefaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:background="@drawable/line_both"
            android:layout_marginTop="12dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:text="@string/square_consult_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.suke.widget.SwitchButton
                android:id="@+id/consultAddAnonymous"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:sb_checked_color="@color/colorTheme"
                android:layout_width="55dp"
                android:layout_height="35dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>