<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@drawable/bg_dialog_popup"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/line_bot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:paddingBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/line_bot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/payAddTitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorDark"
                    android:text="设置赏金"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/line_bot"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/square_question_bounty_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:src="@mipmap/square_question_bounty"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/payAddAmount"
                    android:layout_centerVertical="true"
                    android:layout_width="15dp"
                    android:layout_height="15dp" />
                <EditText
                    android:id="@+id/payAddAmount"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="number|numberDecimal"
                    android:background="@null"
                    android:padding="0dp"
                    android:minWidth="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/payAddMethodBtn"
                android:background="@color/colorLight"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="1px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/square_question_bounty_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/payAddMethod"
                    android:textColor="@color/colorDefaultText"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/payMethodGoIC"
                    android:text="微信支付"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/payMethodGoIC"
                    android:src="@mipmap/btn_go_gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="12dp"
                    android:layout_height="12dp" />
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/payAddBtn"
            android:textColor="@color/colorLight"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_theme"
            android:text="@string/square_question_bounty_pay"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>